--- a/13-17 ESS.qmd
+++ b/13-17 ESS.qmd
@@ -5,208 +5,47 @@ editor: visual
 ---
 
 ```{r}
+# Using normal way without rjags.
+
 library(ggplot2)
-library(gridExtra)
-
-set.seed(123)  # For reproducibility
-# Step 1: Basic inputs
-adult_placebo_n_pool <- 494
-adult_placebo_events_pool <- 45
-adult_drug_n_pool <- 509
-adult_drug_events_pool <- 375
-
-pediatric_placebo_n_pool <- 6
-pediatric_placebo_events_pool <- 1
-pediatric_drug_n_pool <- 30
-pediatric_drug_events_pool <- 15
-
-# Step 2: Log-odds and variance
-log_odds_adult_placebo <- log(adult_placebo_events_pool / (adult_placebo_n_pool - adult_placebo_events_pool))
-log_odds_adult_drug <- log(adult_drug_events_pool / (adult_drug_n_pool - adult_drug_events_pool))
-adult_variance_placebo <- adult_placebo_n_pool / (adult_placebo_events_pool * (adult_placebo_n_pool - adult_placebo_events_pool))
-adult_variance_drug <- adult_drug_n_pool / (adult_drug_events_pool * (adult_drug_n_pool - adult_drug_events_pool))
-adult_variance <- adult_variance_placebo + adult_variance_drug
-
-log_odds_pediatric_placebo <- log(pediatric_placebo_events_pool / (pediatric_placebo_n_pool - pediatric_placebo_events_pool))
-log_odds_pediatric_drug <- log(pediatric_drug_events_pool / (pediatric_drug_n_pool - pediatric_drug_events_pool))
-pediatric_variance_placebo <- pediatric_placebo_n_pool / (pediatric_placebo_events_pool * (pediatric_placebo_n_pool - pediatric_placebo_events_pool))
-pediatric_variance_drug <- pediatric_drug_n_pool / (pediatric_drug_events_pool * (pediatric_drug_n_pool - pediatric_drug_events_pool))
-pediatric_variance <- pediatric_variance_placebo + pediatric_variance_drug
-
-# Step 3: Skeptical prior
-m <- 36/2
-skeptical_prior_variance <- m * pediatric_variance
-skeptical_prior_mean <- 0
-
-observed_pediatric_effect <- log_odds_pediatric_drug - log_odds_pediatric_placebo
-
-# Functions
-update_posterior_component <- function(mu_prior, var_prior, mu_lik, var_lik) {
-  var_post = 1 / (1/var_prior + 1/var_lik)
-  mu_post = var_post * (mu_prior/var_prior + mu_lik/var_lik)
-  return(list(mu = mu_post, var = var_post))
-}
-
-compute_Cj <- function(mu_prior, var_prior, mu_lik, var_lik) {
-  var_sum = var_prior + var_lik
-  dnorm(mu_lik, mean = mu_prior, sd = sqrt(var_sum))
-}
-
-# Step 4: Initialize results
-results <- data.frame(
-  a = numeric(0),
-  ci_lower = numeric(0),
-  ci_upper = numeric(0),
-  OR_median = numeric(0),
-  ESS = numeric(0)
-)
-
-# Pediatric-only posterior variance (baseline for ESS)
-skeptical_mu_vague <- 0
-skeptical_var_vague <- 1e6
-var_post_ped_only <- 1 / (1/skeptical_var_vague + 1/pediatric_variance)
-mu_post_ped_only <- var_post_ped_only * (skeptical_mu_vague/skeptical_var_vague + observed_pediatric_effect/pediatric_variance)
-n_samples <- 5000
-ped_only_samples <- rnorm(n_samples, mean = mu_post_ped_only, sd = sqrt(var_post_ped_only))
-var_no_prior <- var(ped_only_samples)
-n_pediatric <- pediatric_placebo_n_pool + pediatric_drug_n_pool
-
-# Step 5: Main loop over a
-for (a in seq(0, 1, by = 0.02)) {
-  
-  k0 <- c(a, 1 - a)
-  
-  priors <- list(
-    list(mu = log_odds_adult_drug - log_odds_adult_placebo, var = adult_variance),
-    list(mu = skeptical_prior_mean, var = skeptical_prior_variance)
-  )
-  
-  posterior_components <- list()
-  Cj <- numeric(length(priors))
-  
-  for (j in 1:length(priors)) {
-    prior <- priors[[j]]
-    posterior_components[[j]] <- update_posterior_component(
-      mu_prior = prior$mu, var_prior = prior$var,
-      mu_lik = observed_pediatric_effect, var_lik = pediatric_variance
-    )
-    Cj[j] <- compute_Cj(prior$mu, prior$var, observed_pediatric_effect, pediatric_variance)
-  }
-  
-  # Update posterior mixture weights
-  k1 <- k0 * Cj
-  k1 <- k1 / sum(k1)
-  
-  # Sample from mixture posterior
-  samples_logor <- numeric(n_samples)
-  for (s in 1:n_samples) {
-    component <- sample(1:2, size = 1, prob = k1)
-    samples_logor[s] <- rnorm(1,
-                              mean = posterior_components[[component]]$mu,
-                              sd = sqrt(posterior_components[[component]]$var))
-  }
-  
-  samples_or <- exp(samples_logor)  # transform back to OR scale
-  
-  # Save results
-  ci_lower <- quantile(samples_or, 0.025)
-  ci_upper <- quantile(samples_or, 0.975)
-  OR_median <- median(samples_or)
-  
-# 传统的有效样本量 (ESS) 计算方法
-# 使用后验样本方差与先验样本方差的比例来计算ESS
-var_with_prior <- var(samples_logor)  # 后验样本方差
-# 这里 var_no_prior 应该是基于没有先验情况下的理论方差。我们可以使用原始方差作为近似值
-var_no_prior <- pediatric_variance  # 无先验情况下的方差（假设为输入数据中的方差）
-
-# 计算有效样本量 (ESS)，假设n是样本数量
-ess <- n_pediatric * (var_no_prior / var_with_prior-1)  # 计算ESS
-
-# 保存结果
-results <- rbind(results, data.frame(a = a, ci_lower = ci_lower, ci_upper = ci_upper,
-                                     OR_median = OR_median, ESS = ess))
-
-}
-
-# Step 6: Find tipping point
-tipping_point <- results[which(results$ci_lower > 1)[1], ]
-
-cat("Tipping Point Found!\n")
-cat("Adult Prior Weight (a):", tipping_point$a, "\n")
-cat("Posterior OR Median:", round(tipping_point$OR_median, 2), "\n")
-cat("95% CI: (", round(tipping_point$ci_lower, 2), ",", round(tipping_point$ci_upper, 2), ")\n")
-cat("Tipping Point ESS:", round(tipping_point$ESS, 1), "pediatric patients\n")
-
-# Step 7: Plot
-p1 <- ggplot(results, aes(x = a)) +
-  geom_line(aes(y = OR_median), color = "blue", size = 1) +
-  geom_ribbon(aes(ymin = ci_lower, ymax = ci_upper), fill = "skyblue", alpha = 0.3) +
-  geom_hline(yintercept = 1, linetype = "dashed", color = "red") +
-  geom_vline(xintercept = tipping_point$a, linetype = "dashed", color = "darkred") +
-  labs(
-    title = "Posterior Odds Ratio vs Adult Prior Weight (a)",
-    x = "Adult Prior Weight (a)",
-    y = "Posterior Odds Ratio"
-  ) +
-  theme_minimal()
-
-p2 <- ggplot(results, aes(x = a, y = ESS)) +
-  geom_line(color = "darkgreen", size = 1) +
-  geom_point(color = "darkgreen") +
-  geom_vline(xintercept = tipping_point$a, linetype = "dashed", color = "darkred") +
-  labs(
-    title = "Effective Sample Size vs Adult Prior Weight",
-    x = "Adult Prior Weight (a)",
-    y = "Effective Sample Size (ESS)"
-  ) +
-  theme_minimal()
-
-grid.arrange(p1, p2, ncol = 2)
-
-```
-
-```{r}
-library(ggplot2)
-library(gridExtra)
 library(dplyr)
 
+# Function to compute exact conditional likelihood for binomial-Beta model
 compute_Cj_exact <- function(a_j, b_j, x, n) {
-  choose(n, x) *
-    beta(a_j + x, b_j + n - x) /
-    beta(a_j, b_j)
+  choose(n, x) * beta(a_j + x, b_j + n - x) / beta(a_j, b_j)
 }
 
 set.seed(123)
 
-# 数据输入
+# Input data
 adult_placebo_n <- 494; adult_placebo_r <- 45
 adult_drug_n <- 509; adult_drug_r <- 375
 ped_placebo_n <- 6; ped_placebo_r <- 1
 ped_drug_n <- 30; ped_drug_r <- 15
 
-# 参数设置
-n_samples <- 5000
+# Parameters
+n_samples <- 10000
 alpha_skeptical <- 1; beta_skeptical <- 1
 
-# 成人先验参数
+# Prior parameters from adult data
 alpha_adult_placebo <- adult_placebo_r + 1
 beta_adult_placebo <- adult_placebo_n - adult_placebo_r + 1
 alpha_adult_drug <- adult_drug_r + 1
 beta_adult_drug <- adult_drug_n - adult_drug_r + 1
 
-# 儿童无先验后验（用于ESS计算）
+# Posterior from pediatric data only (used for ESS calculation)
 alpha_ped_placebo <- ped_placebo_r + 1
 beta_ped_placebo <- ped_placebo_n - ped_placebo_r + 1
 alpha_ped_drug <- ped_drug_r + 1
 beta_ped_drug <- ped_drug_n - ped_drug_r + 1
 
-# 无先验方差基准
+# Variance with no prior (reference for ESS)
 var_placebo_no_prior <- (alpha_ped_placebo * beta_ped_placebo) / 
   ((alpha_ped_placebo + beta_ped_placebo)^2 * (alpha_ped_placebo + beta_ped_placebo + 1))
 var_drug_no_prior <- (alpha_ped_drug * beta_ped_drug) /
   ((alpha_ped_drug + beta_ped_drug)^2 * (alpha_ped_drug + beta_ped_drug + 1))
 
-# 初始化结果表
+# Initialize results
 results <- data.frame(
   k = numeric(),
   k_treat = numeric(),
@@ -219,38 +58,35 @@ results <- data.frame(
   prob_superior = numeric()
 )
 
-# 主分析循环
-for (k in seq(0, 1, by = 0.002)) {
+# Main loop: vary initial weight from 0 to 1
+for (k in seq(0, 1, by = 0.02)) {
   
-  # 1. 计算治疗组权重 ----
+  # 1. Compute treatment group weight
   C_treat <- c(
     compute_Cj_exact(alpha_adult_drug, beta_adult_drug, ped_drug_r, ped_drug_n),
     compute_Cj_exact(alpha_skeptical, beta_skeptical, ped_drug_r, ped_drug_n)
   )
-  k1_treat <- (k * C_treat[1]) / (k * C_treat[1] + (1-k) * C_treat[2])
+  k1_treat <- (k * C_treat[1]) / (k * C_treat[1] + (1 - k) * C_treat[2])
   
-  # 2. 计算对照组权重 ----
+  # 2. Compute control group weight
   C_control <- c(
     compute_Cj_exact(alpha_adult_placebo, beta_adult_placebo, ped_placebo_r, ped_placebo_n),
     compute_Cj_exact(alpha_skeptical, beta_skeptical, ped_placebo_r, ped_placebo_n)
   )
-  k1_control <- (k * C_control[1]) / (k * C_control[1] + (1-k) * C_control[2])
+  k1_control <- (k * C_control[1]) / (k * C_control[1] + (1 - k) * C_control[2])
   
-  # 3. 形成后验分布 ----
-  # 治疗组后验参数
+  # 3. Posterior parameters (weighted mixture)
   alpha_post_drug_adult <- alpha_adult_drug + ped_drug_r
   beta_post_drug_adult <- beta_adult_drug + ped_drug_n - ped_drug_r
   alpha_post_drug_skeptical <- alpha_skeptical + ped_drug_r
   beta_post_drug_skeptical <- beta_skeptical + ped_drug_n - ped_drug_r
   
-  # 对照组后验参数
   alpha_post_placebo_adult <- alpha_adult_placebo + ped_placebo_r
   beta_post_placebo_adult <- beta_adult_placebo + ped_placebo_n - ped_placebo_r
   alpha_post_placebo_skeptical <- alpha_skeptical + ped_placebo_r
   beta_post_placebo_skeptical <- beta_skeptical + ped_placebo_n - ped_placebo_r
   
-  # 4. 混合采样 ----
-  # 治疗组采样
+  # 4. Sample from posterior mixture
   mix_drug <- runif(n_samples) < k1_treat
   samples_drug <- ifelse(
     mix_drug,
@@ -258,7 +94,6 @@ for (k in seq(0, 1, by = 0.002)) {
     rbeta(n_samples, alpha_post_drug_skeptical, beta_post_drug_skeptical)
   )
   
-  # 对照组采样
   mix_placebo <- runif(n_samples) < k1_control
   samples_placebo <- ifelse(
     mix_placebo,
@@ -266,11 +101,11 @@ for (k in seq(0, 1, by = 0.002)) {
     rbeta(n_samples, alpha_post_placebo_skeptical, beta_post_placebo_skeptical)
   )
   
-  # 5. 计算统计量 ----
+  # 5. Compute posterior difference
   diff <- samples_drug - samples_placebo
   ci <- quantile(diff, c(0.025, 0.975))
   
-  # 6. 存储结果 ----
+  # 6. Store results
   results <- rbind(results, data.frame(
     k = k,
     k_treat = k1_treat,
@@ -284,7 +119,7 @@ for (k in seq(0, 1, by = 0.002)) {
   ))
 }
 
-# 结果分析 ----
+# Identify tipping point (first k where 95% CI is fully > 0)
 tipping_point <- results %>% 
   filter(ci_lower > 0) %>% 
   slice(1)
@@ -300,31 +135,142 @@ cat("Pr(Drug > Placebo):", round(tipping_point$prob_superior, 3), "\n")
 cat("ESS (Treatment):", round(tipping_point$ESS_drug, 1), "\n")
 cat("ESS (Control):", round(tipping_point$ESS_placebo, 1), "\n")
 
-# 可视化 ----
-p1 <- ggplot(results, aes(x = k)) +
-  geom_line(aes(y = median_diff), color = "blue") +
-  geom_ribbon(aes(ymin = ci_lower, ymax = ci_upper), alpha = 0.2, fill = "blue") +
-  geom_hline(yintercept = 0, linetype = "dashed") +
-  labs(title = "Treatment Effect (Difference in Response Rates)",
-       x = "Initial Weight (k)", y = "Difference")
-
-p2 <- ggplot(results, aes(x = k)) +
-  geom_line(aes(y = k_treat, color = "Treatment")) +
-  geom_line(aes(y = k_control, color = "Control")) +
-  scale_color_manual(values = c("Treatment" = "red", "Control" = "green")) +
-  labs(title = "Actual Weights Used", x = "Initial Weight (k)", y = "Posterior Weight")
-
-p3 <- ggplot(results, aes(x = k)) +
-  geom_line(aes(y = ESS_drug, color = "Treatment")) +
-  geom_line(aes(y = ESS_placebo, color = "Control")) +
-  scale_color_manual(values = c("Treatment" = "red", "Control" = "green")) +
-  labs(title = "Effective Sample Size", x = "Initial Weight (k)", y = "ESS")
-
-grid.arrange(p1, p2, p3, ncol = 1)
-
-
+# Visualization
+ggplot(results, aes(x = k, y = median_diff)) +
+  geom_ribbon(aes(ymin = ci_lower, ymax = ci_upper), fill = "lightblue", alpha = 0.5) +
+  geom_line(color = "blue", size = 1) +
+  geom_vline(xintercept = tipping_point$k, linetype = "dashed", color = "red") +
+  annotate("text", 
+           x = tipping_point$k, 
+           y = tipping_point$median_diff + 0.02, 
+           label = paste0("Tipping point\nk = ", round(tipping_point$k, 3), 
+                          "\nk_treat = ", round(tipping_point$k_treat, 3)), 
+           color = "red", hjust = -0.1) +
+  labs(x = "Initial Weight (k)",
+       y = "Posterior Median of Drug - Placebo",
+       title = "Tipping Point Analysis with 95% CI") +
+  theme_minimal(base_size = 14)
 
 ```
 
-```         
+```{r}
+# Using JAGS for Bayesian updating
+
+library(rjags)
+library(coda)
+library(dplyr)
+library(ggplot2)
+
+# JAGS model: beta-binomial updating
+model_string <- "
+model {
+  x ~ dbin(theta, n)
+  theta ~ dbeta(a, b)
+}
+"
+
+# Data
+adult_placebo_n <- 494; adult_placebo_r <- 45
+adult_drug_n <- 509; adult_drug_r <- 375
+ped_placebo_n <- 6; ped_placebo_r <- 1
+ped_drug_n <- 30; ped_drug_r <- 15
+
+# Prior parameters
+alpha_skeptical <- 1; beta_skeptical <- 1
+alpha_adult_placebo <- adult_placebo_r + 1
+beta_adult_placebo <- adult_placebo_n - adult_placebo_r + 1
+alpha_adult_drug <- adult_drug_r + 1
+beta_adult_drug <- adult_drug_n - adult_drug_r + 1
+
+# For ESS calculation
+var_placebo_no_prior <- (1 * 6) / (7^2 * 8)
+var_drug_no_prior <- (16 * 16) / (32^2 * 33)
+
+# Sampling function
+run_jags_model <- function(a, b, x, n, n_iter = 10000) {
+  data_jags <- list(a = a, b = b, x = x, n = n)
+  jags_model <- jags.model(textConnection(model_string),
+                           data = data_jags,
+                           n.chains = 1,
+                           quiet = TRUE)
+  update(jags_model, 1000, progress.bar = "none")
+  samples <- coda.samples(jags_model, variable.names = "theta", 
+                          n.iter = n_iter, progress.bar = "none")
+  return(as.numeric(samples[[1]]))
+}
+
+# Main loop
+n_samples <- 10000
+results <- data.frame()
+
+compute_Cj_exact <- function(a_j, b_j, x, n) {
+  choose(n, x) * beta(a_j + x, b_j + n - x) / beta(a_j, b_j)
+}
+
+for (k in seq(0, 1, by = 0.02)) {
+
+  # Marginal likelihoods
+  C_treat <- c(
+    compute_Cj_exact(alpha_adult_drug, beta_adult_drug, ped_drug_r, ped_drug_n),
+    compute_Cj_exact(alpha_skeptical, beta_skeptical, ped_drug_r, ped_drug_n)
+  )
+  k1_treat <- (k * C_treat[1]) / (k * C_treat[1] + (1 - k) * C_treat[2])
+
+  C_control <- c(
+    compute_Cj_exact(alpha_adult_placebo, beta_adult_placebo, ped_placebo_r, ped_placebo_n),
+    compute_Cj_exact(alpha_skeptical, beta_skeptical, ped_placebo_r, ped_placebo_n)
+  )
+  k1_control <- (k * C_control[1]) / (k * C_control[1] + (1 - k) * C_control[2])
+
+  # Sample posteriors
+  samples_drug_adult <- run_jags_model(alpha_adult_drug, beta_adult_drug, ped_drug_r, ped_drug_n)
+  samples_drug_skeptical <- run_jags_model(alpha_skeptical, beta_skeptical, ped_drug_r, ped_drug_n)
+  samples_placebo_adult <- run_jags_model(alpha_adult_placebo, beta_adult_placebo, ped_placebo_r, ped_placebo_n)
+  samples_placebo_skeptical <- run_jags_model(alpha_skeptical, beta_skeptical, ped_placebo_r, ped_placebo_n)
+
+  # Mixture sampling
+  mix_drug <- runif(n_samples) < k1_treat
+  mix_placebo <- runif(n_samples) < k1_control
+  samples_drug <- ifelse(mix_drug, samples_drug_adult, samples_drug_skeptical)
+  samples_placebo <- ifelse(mix_placebo, samples_placebo_adult, samples_placebo_skeptical)
+
+  diff <- samples_drug - samples_placebo
+  ci <- quantile(diff, c(0.025, 0.975))
+  
+  # ESS calculation
+  ESS_drug <- max(0, ped_drug_n * (var_drug_no_prior / var(samples_drug) - 1))
+  ESS_placebo <- max(0, ped_placebo_n * (var_placebo_no_prior / var(samples_placebo) - 1))
+
+  results <- rbind(results, data.frame(
+    k = k,
+    k_treat = k1_treat,
+    k_control = k1_control,
+    ci_lower = ci[1],
+    ci_upper = ci[2],
+    median_diff = median(diff),
+    ESS_placebo = ESS_placebo,
+    ESS_drug = ESS_drug,
+    prob_superior = mean(diff > 0)
+  ))
+}
+
+# Find tipping point
+tipping_point <- results %>%
+  filter(ci_lower > 0) %>%
+  slice(1)
+
+cat("Tipping Point Analysis:\n")
+cat("Initial Weight (k):", tipping_point$k, "\n")
+cat("Actual Weights Used:\n")
+cat("  Treatment:", round(tipping_point$k_treat, 3), "\n")
+cat("  Control:", round(tipping_point$k_control, 3), "\n")
+cat("Response Rate Difference:", round(tipping_point$median_diff, 3), "\n")
+cat("95% CI: [", round(tipping_point$ci_lower, 3), ",", round(tipping_point$ci_upper, 3), "]\n")
+cat("Pr(Drug > Placebo):", round(tipping_point$prob_superior, 3), "\n")
+cat("ESS (Treatment):", round(tipping_point$ESS_drug, 1), "\n")
+cat("ESS (Control):", round(tipping_point$ESS_placebo, 1), "\n")
+
+
+    
 ```
+
